--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>ProjectManager</title>
   <link rel="stylesheet" href="app.css" />
-  <script src="dist/app.js" defer></script>
+  <script src="dist/bundle.js" defer></script>
+
 </head>
 
 <body>
@@ -29,7 +30,11 @@
     </form>
   </template>
   <template id="single-project">
-    <li></li>
+    <li draggable="true">
+      <h2></h2>
+      <h3></h3>
+      <p></p>
+    </li>
   </template>
   <template id="project-list">
     <section class="projects">
